--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,1 +1,7 @@
-$primary: #663399;
+$light-slate-gray: #a8a2b1;
+$light-slate-gray-2: #9896a8;
+$beige: #f3e1d9;
+$beige-2: #edd0c9;
+$rosy: #d1b4b4;
+
+$primary: $light-slate-gray;
