--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,7 +1,14 @@
 $light-slate-gray: #a8a2b1;
 $light-slate-gray-2: #9896a8;
-$beige: #f3e1d9;
-$beige-2: #edd0c9;
-$rosy: #d1b4b4;
+$beige-light: #f3e1d9;
+$beige: #edd0c9;
+$rosy: #fe8e8e;
 
-$primary: $light-slate-gray;
+$purple: #8a4d76;
+$pink: #fa7c91;
+$brown: #757763;
+$beige-light: #d0d1cd;
+$beige-lighter: #eff0eb;
+
+$primary: $rosy;
+// $secondary: $light-slate-gray;
