Add images to columns for 3col block

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -5,5 +5,7 @@ $beige-light: #f3e1d9;
 $beige: #edd0c9;
 $rosy: #fe8e8e;
 
+// Bulma customization variables
+// See reference:  https://bulma.io/documentation/customize/variables/
+// General reference: https://bulma.io/documentation/
 $primary: $rosy;
-// $secondary: $light-slate-gray;
