--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -70,9 +70,9 @@ body {
   }
 }
 
-.block-feature img {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
+// .block-feature img {
+//   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+// }
 
 .columns.is-reversed {
   flex-direction: row-reverse;
